0.83.11
  - With the config option "startcmd=true" or command-
    line option -winrun, Windows applications can now
    be launched from within a DOS program or from the
    4DOS shell in addition to built-in shell. (Wengier)
  - Added support for the clipboard device (CLIP$) and
    DOS clipboard API on non-Windows systems (they were
    previously only supported on the Windows platform).
    In Linux/macOS SDL1 builds only the read access is
    supported whereas Linux/macOS SDL2 builds support
    both read and write accesses. (Wengier)
  - Added a simple BIOS Setup Utlity, which will show
    a summary of the current system configuration and
    allow users to change the date and time. Press Del
    key at the BIOS boot screen to enter. (Wengier)
  - Added config option "showbasic" in [sdl] section
    which when set to false will hide DOSBox-X version
    number and running speed in the titlebar. (Wengier)
  - Added experimental option to load a VGA BIOS ROM
    image and execute it, instead of our own INT 10h
    emulation. If enabled, it will load the specific
    ROM file into C000:0000. If not specified, it
    will choose based on machine type. VGA BIOS ROM
    images (e.g. et4000.bin for Tseng ET4000 emulation)
    can be dumped from real hardware or downloaded from
    the PCem ROMs collection. It can be set with config
    option "vga bios rom image" in [video] section.
  - Improved handling for file- and record-locking
    for non-Windows platforms. Portions of the code
    are adopted from DOSEmu. (Wengier)
  - Improved handling for the setting "ansi.sys=false",
    such as fixing the welcome screen messup in this
    case and allowing the use of a custom ANSI TSR
    (such as NNANSI.COM) instead. (Wengier & stu)
  - You can now press Ctrl+C or Ctrl+Break to break
    from long outputs from commands like COPY, TYPE,
    DIR /S, and ATTRIB /S. (Wengier)
  - Renamed MEM.COM to MEM.EXE to match DOS. (Wengier)